fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -210,7 +210,7 @@ nav{
     margin-top:1rem;
     overflow-wrap: break-word;
     width: 100vw;
-    margin-left: 1px;
+    margin-left: 1.5rem;
 }
 
 .original{
@@ -252,7 +252,7 @@ nav{
 
   #searchbox{
       position:inherit;
-      margin-left: 0;
+      margin-left: 3rem;
       justify-content: center;
   }
 
@@ -264,7 +264,7 @@ nav{
     margin-top: 1rem;
     overflow-wrap: break-word;
     width: 100vw;
-    margin-left: 1px;
+    margin-left: 1.5rem;
 }
   .original{
     position: relative;
@@ -315,7 +315,7 @@ nav{
     margin-top: 1rem;
     overflow-wrap: break-word;
     width: 100%;
-    margin-left: 1px;
+    margin-left: 1.5rem;
 }
 
 .advanced{
